alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
      flex-direction: column;
 }
 .Dashboard__rows{
-    margin-top: 80px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     height: 100px;
@@ -15,6 +15,8 @@
     flex-wrap: wrap;
     width:80%;
     margin-left:200px;
+    margin-top: 50px;
+  
   }
   .add_button{
     background: rgb(70, 10, 235);
@@ -31,7 +33,7 @@
   }
   .Dashboard__add_rows{
     background: rgb(70, 10, 235);
-    width: 120px;
+    width: 100px;
     height: 40px;
     border: 1px solid;
     font-weight: bolder;
@@ -40,18 +42,29 @@
     color: #fff;
     cursor: pointer;
     outline: none;
-    margin-left: 300px;
+    margin-left: 350px;
+    border-radius: 1rem;
   }
   .Dashboard__add_card{
+    position: absolute;
+
     background: rgb(70, 10, 235);
     width: 120px;
     height: 40px;
     border: 1px solid;
     font-weight: bolder;
-    margin-top: 20px;
+    top:45%;
+    margin-left: 230px;
     border-color: border-box rgb(12, 9, 180);
     color: #fff;
     cursor: pointer;
     outline: none;
     left: 0;
+    border-radius: 1rem;
+  }
+  @media only screen and (max-width: 600px) {
+    .Dashboard__add_card {
+      margin-left: 150px;
+      top:40%;
+    }
   }
